[package]
name = "ltv"
version = "0.2.6"
authors = ["Sam Mackenzie <smackenzie@descartes.com>"]
edition = "2018"
license="MIT"
description="Length Type Value - Reader / Writer"
repository="https://github.com/pigeonhands/ltv-rs"
documentation="https://docs.rs/ltv"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ltv_derive = { version = "0.2.2", path = "../ltv_derive" }

[dev-dependencies]
ltv_derive = { version = "0.2.2", path = "../ltv_derive" }
