[package]
name = "ltv_derive"
version = "0.1.0"
authors = ["Sam Mackenzie <smackenzie@descartes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ltv_derive_impl = { version = "0.1", path = "ltv_derive_impl" }

[dev-dependencies]
ltv = { version = "0.1", path = "../ltv" }
