[package]
name = "ltv_derive"
version = "0.2.2"
authors = ["Sam Mackenzie <smackenzie@descartes.com>"]
edition = "2018"
license="MIT"
description="ltv derive"
repository="https://github.com/pigeonhands/ltv-rs"
documentation="https://docs.rs/ltv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ltv_derive_impl = { version = "0.2.7", path = "./ltv_derive_impl" }

[dev-dependencies]
ltv = { version = "0.2.9", path = "../ltv" }
