[package]
name = "ltv_derive_impl"
version = "0.1.0"
authors = ["Sam Mackenzie <smackenzie@descartes.com>"]
edition = "2018"
license="MIT"
description="Length Type Value - Reader / Writer"
repository="https://github.com/pigeonhands/ltv-rs"
documentation="https://docs.rs/ltv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ltv_derive_impl"
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"


